third_party/move/move-compiler-v2/tests/checking/typing/native_structs_pack_unpack.exp

Diagnostics:
error: native struct `C::T` has no fields
  ┌─ tests/checking/typing/native_structs_pack_unpack.move:9:9
  │
9 │         C::T {}
  │         ^^^^

error: native struct `C::T` has no fields
   ┌─ tests/checking/typing/native_structs_pack_unpack.move:12:13
   │
12 │         let C::T {} = c;
   │             ^^^^

error: field `f` not declared in struct `C::T`
   ┌─ tests/checking/typing/native_structs_pack_unpack.move:15:17
   │
15 │         let f = c.f;
   │                 ^
